--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
+
   <body>
-    <div class="main">
-      <button class="minus">-</button>
-      <span>100</span>
-      <button class="plus">+</button>
-    </div>
+    <main>
+      <div class="container">
+        <h1>MY TODO LIST</h1>
+        <div class="list">
+          <input id="myInput" placeholder="Define list here..." type="text" />
+          <button class="addBtn">add</button>
+        </div>
+        <div class="myList"></div>
+        <!-- <span id="deleteBtn">x</span> -->
+      </div>
+    </main>
   </body>
 </html>
