--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
   </head>
 
   <body>
+    <h2>My To-dos</h2>
+    <p>Number of to-dos: <span id="noOfTodos">0</span></p>
+    <ul id="todoList"></ul>
+  </body>
+
+  <!-- <body>
     <main>
       <div class="container">
         <h1>MY TODO LIST</h1>
@@ -16,8 +22,8 @@
           <button class="addBtn">add</button>
         </div>
         <div class="myList"></div>
-        <!-- <span id="deleteBtn">x</span> -->
+        <span id="deleteBtn">x</span>
       </div>
     </main>
-  </body>
+  </body> -->
 </html>
